# oxycards

./: .gitignore  404.html  Cargo.toml  README.md  cards.html  example.md  fill_in_the_blanks.html  flashcard.html  getting-started.html  index.html  input.md  installation.html  multiple_answer.html  multiple_choice.html  order.html  print.html  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: 0-feature.md  1-bug.md  2-documentation.md  4-refactor.md
.github/PULL_REQUEST_TEMPLATE/: 0-feature.md  1-bug.md  2-documentation.md  4-refactor.md
.github/workflows/: deploy.yml
book/: book.toml
book/book/: 404.html  cards.html  fill_in_the_blanks.html  flashcard.html  getting-started.html  index.html  installation.html  multiple_answer.html  multiple_choice.html  order.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  cards.md  fill_in_the_blanks.md  flashcard.md  getting-started.md  installation.md  introduction.md  multiple_answer.md  multiple_choice.md  order.md
src/: main.rs  ui.rs
src/models/: args.rs  card.rs  cards.rs  choice.rs  file_type.rs  fill_in_the_blanks.rs  flashcard.rs  mod.rs  multiple_answer.rs  multiple_choice.rs  order.rs  stateful_list.rs  user_answer.rs
src/models/card_types/: fill_in_the_blanks.rs  flashcard.rs  mod.rs  multiple_answer.rs  multiple_choice.rs  order.rs
src/models/errors/: errors.rs  file_error.rs  mod.rs  parsing_error.rs
