[package]
name = "oxycards"
version = "1.0.1"
edition = "2021"
authors = ["Brook Jeynes jeynesbrook@pm.me", "twny hitawnie@gmail.com"]
license = "MIT"
description = "An interactive quiz application built for the terminal."
documentation = "https://brookjeynes.github.io/oxycards/"
readme = "README.md"
homepage = "https://github.com/BrookJeynes/oxycards"
repository = "https://github.com/BrookJeynes/oxycards-rs"
keywords = ["cli", "tui", "quiz", "study", "flashcard"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"                    # An implementation of regular expressions for Rust. This implementation uses finite automata …
rand = "0.8.5"              # Random number generators and other randomness functionality. 
tui = "0.19.0"                    # A library to build rich terminal user interfaces or dashboards 
crossterm = "0.26.0"            # A crossplatform terminal library for manipulating terminals.
clap = { version = "4.1.6", features = ["derive"] }
